--- a/app/src/main/res/layout/activity_email_sender.xml
+++ b/app/src/main/res/layout/activity_email_sender.xml
@@ -6,43 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".EmailSender">
 
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="254dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        tools:layout_editor_absoluteY="42dp" />
-
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="100dp"
-        android:layout_height="56dp"
+        android:layout_width="70dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="508dp"
         android:text="To:"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.347"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintVertical_bias="0.445" />
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="376dp"
-        android:layout_height="328dp"
+        android:layout_width="368dp"
+        android:layout_height="134dp"
         android:ems="10"
+        android:hint="Email Body"
         android:inputType="textPersonName"
-        android:text="Type Email Here!!"
-        android:textSize="36sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintHorizontal_bias="0.627"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.652" />
+        app:layout_constraintVertical_bias="0.499" />
 
     <Button
         android:id="@+id/sendEmail"
@@ -54,10 +45,10 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.935"
+        app:layout_constraintHorizontal_bias="0.748"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.922" />
+        app:layout_constraintVertical_bias="0.754" />
 
     <TextView
         android:id="@+id/textView4"
@@ -65,24 +56,39 @@
         android:layout_height="52dp"
         android:text="Subject:"
         android:textSize="26sp"
-        app:layout_constraintBottom_toTopOf="@+id/editText3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706" />
+        app:layout_constraintVertical_bias="0.278" />
 
     <EditText
         android:id="@+id/editText5"
-        android:layout_width="256dp"
-        android:layout_height="71dp"
+        android:layout_width="242dp"
+        android:layout_height="61dp"
         android:ems="10"
+        android:hint="Subject "
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/editText3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.731"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.745"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.723" />
+        app:layout_constraintVertical_bias="0.314" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="251dp"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Sent To"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.787"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.129" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
